# docs/swagger/swagger.json
@@ -1,61 +1,20 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a super game.",
-        "title": "Sad Islands API",
+        "description": "Documentation",
+        "title": "Escapade API",
         "contact": {},
         "license": {},
         "version": "1.0"
     },
-    "host": "104.248.28.45",
+    "host": "https://escapade-backend.herokuapp.com",
     "basePath": "/api/v1",
     "paths": {
-        "/avatars": {
-            "put": {
-                "description": "Update profile avatar",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Put avatar",
-                "operationId": "put-avatar",
-                "parameters": [
-                    {
-                        "description": "Avatar",
-                        "name": "avatar",
-                        "in": "body",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Profile avatar is updated successfully",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.ProfileAvatar"
-                        }
-                    },
-                    "400": {
-                        "description": "Incorrect request data"
-                    },
-                    "403": {
-                        "description": "Not authorized"
-                    },
-                    "500": {
-                        "description": "Database error"
-                    }
-                }
-            }
-        },
-        "/profiles": {
+        "/users/{name}/profile": {
             "get": {
-                "description": "Check profile existence with email or nickname",
-                "summary": "Get profiles",
-                "operationId": "get-profiles",
+                "description": "return public information, such as name or best_score",
+                "summary": "Get some of user fields",
+                "operationId": "GetProfile",
                 "parameters": [
                     {
                         "type": "string",
@@ -71,358 +30,60 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "Profile found successfully"
-                    },
-                    "400": {
-                        "description": "Incorrect request data"
-                    },
-                    "403": {
-                        "description": "Not authorized"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    },
-                    "500": {
-                        "description": "Database error"
-                    }
-                }
-            },
-            "post": {
-                "description": "Create profile",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Post profile",
-                "operationId": "post-profile",
-                "parameters": [
-                    {
-                        "description": "Email, nickname, password",
-                        "name": "profile_info",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.ProfileInfo"
-                        }
-                    },
-                    {
-                        "description": "Avatar",
-                        "name": "avatar",
-                        "in": "body",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Profile created successfully",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.Profile"
-                        }
-                    },
-                    "400": {
-                        "description": "Incorrect request data"
-                    },
-                    "500": {
-                        "description": "Database error"
-                    }
-                }
-            }
-        },
-        "/profiles/{id}": {
-            "get": {
-                "description": "Get profile info (for profile owner returns info with email)",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get profile",
-                "operationId": "get-profile",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Profile ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
                     "200": {
                         "description": "Profile found successfully",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/models.Profile"
-                        }
-                    },
-                    "403": {
-                        "description": "Not authorized"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    },
-                    "500": {
-                        "description": "Database error"
-                    }
-                }
-            },
-            "put": {
-                "description": "Update profile info",
-                "consumes": [
-                    "application/json"
-                ],
-                "summary": "Put profile",
-                "operationId": "put-profile",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Profile ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Email, nickname, password",
-                        "name": "profile_info",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.ProfileInfo"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Profile info is updated successfully"
-                    },
-                    "400": {
-                        "description": "Incorrect request data"
-                    },
-                    "403": {
-                        "description": "Not authorized"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    },
-                    "422": {
-                        "description": "Incorrrect current password"
-                    },
-                    "500": {
-                        "description": "Database error"
-                    }
-                }
-            }
-        },
-        "/scores": {
-            "get": {
-                "description": "Get scoreboard",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get scoreboard",
-                "operationId": "get-scoreboard",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "limit number",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "start index",
-                        "name": "start",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Scoreboard found successfully",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.Profiles"
+                            "$ref": "#/definitions/models.UserPublicInfo"
                         }
                     },
                     "400": {
-                        "description": "Incorrect request data"
-                    },
-                    "500": {
-                        "description": "Database error"
-                    }
-                }
-            }
-        },
-        "/sessions": {
-            "get": {
-                "description": "Get profile id of authorized client",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get session",
-                "operationId": "get-session",
-                "responses": {
-                    "200": {
-                        "description": "Profile ID found successfully",
-                        "schema": {
-                            "type": "int"
-                        }
-                    },
-                    "403": {
-                        "description": "Not authorized"
-                    }
-                }
-            },
-            "post": {
-                "description": "Creates client session",
-                "consumes": [
-                    "application/json"
-                ],
-                "summary": "Post session",
-                "operationId": "post-session",
-                "parameters": [
-                    {
-                        "description": "Email, password",
-                        "name": "profile_login",
-                        "in": "body",
-                        "required": true,
+                        "description": "Invalid username",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/models.ProfileLogin"
+                            "$ref": "#/definitions/models.Result"
                         }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Session is created successfully",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.Profile"
-                        }
-                    },
-                    "400": {
-                        "description": "Incorrect request data"
-                    },
-                    "403": {
-                        "description": "Not authorized"
-                    },
-                    "422": {
-                        "description": "Unprocessable request data"
-                    }
-                }
-            },
-            "delete": {
-                "description": "Deletes client session",
-                "summary": "Delete session",
-                "operationId": "delete-session",
-                "responses": {
-                    "200": {
-                        "description": "Session is deleted successfully"
-                    },
-                    "403": {
-                        "description": "Not authorized"
                     },
                     "404": {
-                        "description": "Session not found"
+                        "description": "User not found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.Result"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "models.Profile": {
+        "models.Result": {
             "type": "object",
             "properties": {
-                "avatar": {
-                    "type": "string",
-                    "example": "upload/img/1.png"
+                "message": {
+                    "type": "string"
+                },
+                "place": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.UserPublicInfo": {
+            "type": "object",
+            "properties": {
+                "bestScore": {
+                    "type": "string"
+                },
+                "bestTime": {
+                    "type": "string"
                 },
                 "email": {
-                    "type": "string",
-                    "example": "test@mail.ru"
+                    "type": "string"
                 },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "loss": {
-                    "type": "integer",
-                    "example": 50
-                },
-                "nickname": {
-                    "type": "string",
-                    "example": "test"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "-"
-                },
-                "record": {
-                    "type": "integer",
-                    "example": 1500
-                },
-                "win": {
-                    "type": "integer",
-                    "example": 100
-                }
-            }
-        },
-        "models.ProfileAvatar": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string",
-                    "example": "upload/img/1.png"
-                }
-            }
-        },
-        "models.ProfileInfo": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "test@mail.ru"
-                },
-                "nickname": {
-                    "type": "string",
-                    "example": "test"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "-"
-                }
-            }
-        },
-        "models.ProfileLogin": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "test@mail.ru"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "password"
-                }
-            }
-        },
-        "models.Profiles": {
-            "type": "object",
-            "properties": {
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Profile"
-                    }
-                },
-                "total": {
-                    "type": "integer",
-                    "example": 50
+                "name": {
+                    "type": "string"
                 }
             }
         }
